# Lawgic

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.streamlit/: config.toml
backend/: Dockerfile  main.py  requirements.txt
backend/api/: deps.py
backend/api/routers/: auth.py  health.py  legal.py
frontend/: Dockerfile  app.py  requirements.txt
src/core/: config.py
src/models/: schemas.py
src/services/: clause_segmenter.py  legal_analyzer.py  legal_assistant_service.py  local_chat_db.py  pdf_parser.py  rag_service.py  retriever.py  risk_engine.py
src/services/llm/: base.py  providers.py
src/utils/: hf_paths.py  jurisdiction.py
