[project]
name = "proj-prac"
version = "0.1.0"
description = "AI-powered legal document simplification and guidance prototype"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "google-auth>=2.36.0",
    "itsdangerous>=2.2.0",
    "ollama>=0.4.7",
    "pymupdf>=1.25.3",
    "pydantic-settings>=2.6.1",
    "pdfplumber>=0.11.4",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sentence-transformers>=3.0.1",
    "streamlit>=1.45.1",
    "torch>=2.5.1",
    "transformers>=4.47.1",
    "uvicorn>=0.34.0",
]

[tool.uv]
package = true
